added socket.io chat feature

--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -149,3 +149,11 @@ footer h2 {
   font-family: VT323-Regular, VT323;
   fill: #fafafa;
 }
+
+#messages li {
+  color: black;
+}
+
+.own-name {
+  text-align: right;
+}
