--- a/src/views/pages/chat.ejs
+++ b/src/views/pages/chat.ejs
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="js/app.js" defer></script>
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js" defer></script>
+  <script src="scripts/socket.js" defer></script>
 </head>
 <body>
   <header>
@@ -51,7 +52,13 @@
     </svg>
   </header>
   <main>
-
+    <ul id="messages">
+    </ul>
+    <form>
+      <input id="name" type="text" placeholder="Naam"/>
+      <input id="message" type="text" placeholder="Schrijf hier je berichtje"/>
+      <button type="submit">Verstuur</button>
+    </form>
   </main>
   <footer>
     <h2>Met liefde gemaakt door:</h2>
