--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -3,6 +3,7 @@
   scroll-behavior: smooth;
   font-family: 'VT323', monospace;
   margin: 0;
+  padding: 0;
 }
 
 html {
@@ -156,4 +157,72 @@ footer h2 {
 
 .own-name {
   text-align: right;
+}
+
+
+/* chat styles */
+#chat {
+  padding: 0 3em;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  max-width: 400px;
+  height: 50vh;
+}
+
+#chat section {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+#chat ul {
+  padding: 0 1em;
+  width: 100%;
+  height: 300px;
+  overflow-y: scroll;
+}
+
+#chat li {
+  list-style: none;
+  margin: 0.5em 0;
+}
+
+#chat li p:first-of-type {
+  font-size: 1.5em;
+  font-weight: 600;
+}
+
+#chat li p:last-of-type {
+  font-size: 1.25em;
+  font-weight: 400;
+}
+
+#chat form {
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+#chat form input {
+  margin-top: 0.5em;
+  width: 100%;
+  height: 2em;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border-style: none;
+}
+
+#chat form button {
+  width: 100%;
+  height: 2em;
+  border-radius: 20px;
+  border-style: none;
+  background-color: #e8505b;
+  margin-top: 0.75em;
+  box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.25);
 }
