--- a/src/views/pages/chat.ejs
+++ b/src/views/pages/chat.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Teampagina</title>
@@ -11,6 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js" defer></script>
   <script src="scripts/socket.js" defer></script>
 </head>
+
 <body>
   <header>
     <img class="gear" src="images/gear-grey.png" alt="">
@@ -47,18 +49,21 @@
           <path class="cls-5"
             d="M273.65,122.43c.17-.06.74,3.43-1.44,8.43a20.26,20.26,0,0,1-5.71,7.44A19.08,19.08,0,0,1,256,142.42a18.52,18.52,0,0,1-10.9-2.53,19.48,19.48,0,0,1-6.52-6.53c-2.73-4.64-2.57-8.18-2.4-8.15.34-.1.7,3.24,3.54,7.35a19.28,19.28,0,0,0,6.27,5.72,17.63,17.63,0,0,0,9.9,2.14,18,18,0,0,0,9.57-3.59,20.37,20.37,0,0,0,5.55-6.59C273.33,125.74,273.3,122.38,273.65,122.43Z" />
         </g>
-        <text class="cls-6" transform="translate(0 482.86)">DE <tspan class="cls-6" x="0" y="121.12">ROODBOTS</tspan></text>
+        <text class="cls-6" transform="translate(0 482.86)">DE <tspan class="cls-6" x="0" y="121.12">ROODBOTS</tspan>
+        </text>
       </g>
     </svg>
   </header>
-  <main>
-    <ul id="messages">
-    </ul>
-    <form>
-      <input id="name" type="text" placeholder="Naam"/>
-      <input id="message" type="text" placeholder="Schrijf hier je berichtje"/>
-      <button type="submit">Verstuur</button>
-    </form>
+  <main id='chat'>
+    <section>
+      <ul id="messages">
+      </ul>
+      <form>
+        <input id="name" type="text" placeholder="Naam" />
+        <input id="message" type="text" placeholder="Schrijf hier je berichtje" />
+        <button type="submit">Verstuur</button>
+      </form>
+    </section>
   </main>
   <footer>
     <h2>Met liefde gemaakt door:</h2>
@@ -94,9 +99,11 @@
           <path class="cls-5"
             d="M273.65,122.43c.17-.06.74,3.43-1.44,8.43a20.26,20.26,0,0,1-5.71,7.44A19.08,19.08,0,0,1,256,142.42a18.52,18.52,0,0,1-10.9-2.53,19.48,19.48,0,0,1-6.52-6.53c-2.73-4.64-2.57-8.18-2.4-8.15.34-.1.7,3.24,3.54,7.35a19.28,19.28,0,0,0,6.27,5.72,17.63,17.63,0,0,0,9.9,2.14,18,18,0,0,0,9.57-3.59,20.37,20.37,0,0,0,5.55-6.59C273.33,125.74,273.3,122.38,273.65,122.43Z" />
         </g>
-        <text class="cls-7" transform="translate(0 482.86)">DE <tspan class="cls-7" x="0" y="121.12">ROODBOTS</tspan></text>
+        <text class="cls-7" transform="translate(0 482.86)">DE <tspan class="cls-7" x="0" y="121.12">ROODBOTS</tspan>
+        </text>
       </g>
     </svg>
   </footer>
 </body>
+
 </html>
